// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create(newAdmin) returns the correct data shape 1`] = `
Object {
  "adminId": 1,
  "email": "brian@gmail.com",
  "id": "j3iasd",
  "name": "Brian Cranston",
}
`;

exports[`findAll() returns the correct data shape 1`] = `
Array [
  Object {
    "adminId": 3424,
    "email": "mary@gmail.com",
    "id": "2h38dh",
    "name": "Mary Berry",
  },
  Object {
    "adminId": 23423,
    "email": "abc@gmail.com",
    "id": "abc123",
    "name": "John Smith",
  },
]
`;

exports[`findById(adminId) returns the correct data shape 1`] = `
Object {
  "adminId": 23423,
  "email": "abc@gmail.com",
  "id": "abc123",
  "name": "John Smith",
}
`;
